--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@
                 <h1>Features you will <br> love & enjoy</h1>
                 
                 <div class="item"><h4>Dexktop & Mobile Version</h4>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p></div>
+                    <p>We’re a globally recognized custom software development company preferred by clients from industries like Healthcare, Finance, Retail, Manufacturing, Engineering, and more.</p></div>
                 <div class="item">
                     <h4>Drag & Drop Builder</h4>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........    </p>
+                <p>As a feature, drag-and-drop support is not found in all software, though it is sometimes a fast and easy-to-learn technique. However, it is not always clear to users that an item can be dragged and dropped, or what is the command performed by the drag and drop, which can decrease usability  </p>
                 </div>
               <div class="item">
                 <h4>Awesome Modern Design</h4>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                <p>White space has become a trend since web designers have started amazingly experimenting with it in design. The white space trend promotes the philosophy of simplicity that puts the emptiness in the foreground and emphasizes the importance of the minimalist content inside.</p>
               </div>
               <div class="item">
                 <h4>Super Easy to Edit</h4>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                <p>Avidemux’s simple interface makes it one of the best editing software for beginners looking to make enticing video content. This program makes it a breeze to do basic editing, including:</p>
               </div>
             </div>
             <div class="blog-img">
