--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </article>
         <div class="fact">
             <h1>Some Facts</h1>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            <p>While this concept may sound simple, it's surprising how many investors overlook key indicators about a company before they invest. </p>
             <div class="activities">
            <div class="activity">
             <img src="images/icons/ribon.png" alt="">
