--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>G3 Architects</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- header start -->
     <header>
@@ -27,7 +29,11 @@
         <section class="hero-area">
             <div class="hero-text">
                 <h1>Brand New Group of Architects </h1>
-                <p>Many bands might not be so keen to rip it up and start again, especially when they’re on to a good thing.  Finding yourself with a Number One album and selling out arenas is enough for some to repeat a winning formula. Architects however, are that shark that dies if it stops swimming. “It was definitely validating and felt really cool for like a day,” recalls drummer, producer and songwriter Dan Searle of hitting the top spot with ‘For Those That Wish To Exist’.</p>
+                <p>Many bands might not be so keen to rip it up and start again, especially when they’re on to a good
+                    thing. Finding yourself with a Number One album and selling out arenas is enough for some to repeat
+                    a winning formula. Architects however, are that shark that dies if it stops swimming. “It was
+                    definitely validating and felt really cool for like a day,” recalls drummer, producer and songwriter
+                    Dan Searle of hitting the top spot with ‘For Those That Wish To Exist’.</p>
                 <button>Explore More</button>
             </div>
             <div class="hero-image">
@@ -45,71 +51,84 @@
                 <img class="features-image" src="images/team4.png" alt="">
             </div>
             <div class="features-details">
-                <h1> <span class="light">Quick list</span> <span class="deep">of Our</span> <br> <span class="orange">Features</span></h1>
-                <p>Appearing on the screen wrapped in a thick white cardigan after spending the best part of the day on a photoshoot on their hometown beach, their vocalist is every bit courteous and apologetic – the rattling snarl through Architects metalcore foundations nowhere to be seen as</p>
+                <h1> <span class="light">Quick list</span> <span class="deep">of Our</span> <br> <span
+                        class="orange">Features</span></h1>
+                <p>Appearing on the screen wrapped in a thick white cardigan after spending the best part of the day on
+                    a photoshoot on their hometown beach, their vocalist is every bit courteous and apologetic – the
+                    rattling snarl through Architects metalcore foundations nowhere to be seen as</p>
                 <button>Explore More</button>
             </div>
         </section>
         <article class="article">
             <div class="description">
                 <h1>Features you will <br> love & enjoy</h1>
-                
-                <div class="item"><h4>Dexktop & Mobile Version</h4>
-                    <p>We’re a globally recognized custom software development company preferred by clients from industries like Healthcare, Finance, Retail, Manufacturing, Engineering, and more.</p></div>
+
+                <div class="item">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p>We’re a globally recognized custom software development company preferred by clients from
+                        industries like Healthcare, Finance, Retail, Manufacturing, Engineering, and more.</p>
+                </div>
                 <div class="item">
                     <h4>Drag & Drop Builder</h4>
-                <p>As a feature, drag-and-drop support is not found in all software, though it is sometimes a fast and easy-to-learn technique. However, it is not always clear to users that an item can be dragged and dropped, or what is the command performed by the drag and drop, which can decrease usability  </p>
+                    <p>As a feature, drag-and-drop support is not found in all software, though it is sometimes a fast
+                        and easy-to-learn technique. However, it is not always clear to users that an item can be
+                        dragged and dropped, or what is the command performed by the drag and drop, which can decrease
+                        usability </p>
                 </div>
-              <div class="item">
-                <h4>Awesome Modern Design</h4>
-                <p>White space has become a trend since web designers have started amazingly experimenting with it in design. The white space trend promotes the philosophy of simplicity that puts the emptiness in the foreground and emphasizes the importance of the minimalist content inside.</p>
-              </div>
-              <div class="item">
-                <h4>Super Easy to Edit</h4>
-                <p>Avidemux’s simple interface makes it one of the best editing software for beginners looking to make enticing video content. This program makes it a breeze to do basic editing, including:</p>
-              </div>
+                <div class="item">
+                    <h4>Awesome Modern Design</h4>
+                    <p>White space has become a trend since web designers have started amazingly experimenting with it
+                        in design. The white space trend promotes the philosophy of simplicity that puts the emptiness
+                        in the foreground and emphasizes the importance of the minimalist content inside.</p>
+                </div>
+                <div class="item">
+                    <h4>Super Easy to Edit</h4>
+                    <p>Avidemux’s simple interface makes it one of the best editing software for beginners looking to
+                        make enticing video content. This program makes it a breeze to do basic editing, including:</p>
+                </div>
             </div>
             <div class="blog-img">
                 <img src="images/architect.png" alt="">
                 <div class="experience">
                     <div>
                         <h1>10+Year</h1>
-                    <p>Experience</p>
+                        <p>Experience</p>
                     </div>
                 </div>
             </div>
         </article>
         <div class="fact">
             <h1>Some Facts</h1>
-            <p>While this concept may sound simple, it's surprising how many investors overlook key indicators about a company before they invest. </p>
+            <p>While this concept may sound simple, it's surprising how many investors overlook key indicators about a
+                company before they invest. </p>
             <div class="activities">
-           <div class="activity">
-            <img src="images/icons/ribon.png" alt="">
-            <h1>54</h1>
-            <p>Awards Winnings</p>
-           </div>
-           <div class="activity">
-            <img src="images/icons/projects.png" alt="">
-            <h1>1458</h1>
-            <p>Project Finished</p>
-           </div>
-           <div class="activity">
-            <img src="images/icons/customers.png" alt="">
-            <h1>590</h1>
-            <p>Clients Worked</p>
-           </div>
-           <div class="activity">
-            <img src="images/icons/email.png" alt="">
-            <h1>22578</h1>
-            <p>Email Send</p>
-           </div>
+                <div class="activity">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h1>54</h1>
+                    <p>Awards Winnings</p>
+                </div>
+                <div class="activity">
+                    <img src="images/icons/projects.png" alt="">
+                    <h1>1458</h1>
+                    <p>Project Finished</p>
+                </div>
+                <div class="activity">
+                    <img src="images/icons/customers.png" alt="">
+                    <h1>590</h1>
+                    <p>Clients Worked</p>
+                </div>
+                <div class="activity">
+                    <img src="images/icons/email.png" alt="">
+                    <h1>22578</h1>
+                    <p>Email Send</p>
+                </div>
             </div>
         </div>
         <!-- Sponspors -->
         <section class="Sponspors">
             <h1>Our Sponspors</h1>
             <p>There are many variations of passages of Lorem Ipsum available, but <br>
-                 the majority have suffered alteration.</p>
+                the majority have suffered alteration.</p>
             <div class="sponspor">
                 <img src="images/sponsors/spotify.png" alt="">
                 <img src="images/sponsors/amazon.png" alt="">
@@ -124,4 +143,5 @@
         <p>All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
+
 </html>
