--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <p>Email Send</p>
                 </div>
             </div>
-        </div>
+        </div> --> -->
         <!-- Sponspors -->
         <section class="Sponspors">
             <h1>Our Sponspors</h1>
@@ -136,10 +136,10 @@
                 <img src="images/sponsors/telerama.png" alt="">
                 <img src="images/sponsors/figma.png" alt="">
             </div>
-        </section>
-    </main>
+        </section>--->
+    </main> 
     <!-- main end -->
-    <footer>
+     <footer>
         <p>All rights reserved copyright@2023 startup landing page design</p>
     </footer>
 </body>
